--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,12 @@
+
+@import 'https://fonts.googleapis.com/css?family=Montserrat';
+
+
 body{
 	font-family: Arial, Helvetica, sans-serif;
 }
 header{
+	font-size: 16px;
+	color: #333;
 	font-family: 'Montserrat', sans-serif;
 }
