--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -29,72 +29,128 @@ TABLE OF CONTENTS:
 /* 2. TYPOGRAPHY  ======================================== */
 
 body{
+	background-color: #000;
 	font-family: Arial, Helvetica, sans-serif;
+	overflow: hidden;
 }
 header{
 	font-family: 'Montserrat', sans-serif;
 }
 
 /*  CONTENT  =============================================== */
+.body--wrapper{
+	position: relative;
+    width: 1366px;
+    height: 1282px;
+    margin: 0 auto;
+}
 .header {
 	width:	100%;
 	height: 60px;
 	border-bottom: 1px solid #000000;
-	background-image: -moz-linear-gradient( 90deg, rgb(23,23,23) 0%, rgb(48,47,47) 100%);
-	background-image: -webkit-linear-gradient( 90deg, rgb(23,23,23) 0%, rgb(48,47,47) 100%);
-	background-image: -ms-linear-gradient( 90deg, rgb(23,23,23) 0%, rgb(48,47,47) 100%);
+	background-image: -moz-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(51,51,51) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(51,51,51) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(0,0,0) 0%, rgb(51,51,51) 100%);
 	background-color: #000000;
-	nav{
-		
-		float:left;
+	.header__logo{
+		float: left;
+		padding: 8px;
+		margin-left: 150px;
+	}
+	.header__logo-banner{
+		float: left;
+		// display: block;
+		margin-left: 800px;
+	}
+	.header__nav{
 		position: absolute;
-		right: 0px;
-		top: 26px;
-		text-transform: uppercase;
+		left: 280px;
+		// left: 23%;
+		top: 0px;
 		ul li{
-			float:left;
-			a{
-				border-left: 1px solid #595959;
-				/*padding: 23px 24px 24px 24px;*/
-				letter-spacing: -.04em;
+			float: left;
+			border-right: 2px solid #000000;
+			padding: 22px 0 22px 0;
+			.header__nav-home,
+			.header__nav-work,
+			.header__nav-shoppingTools,
+			.header__nav-capability,
+			.header__nav-owners{
+				padding: 16px 24px 21px 24px;
 				font-weight: 400;
-				font-size: 18px;
+				text-decoration: none;
 				color: #ffffff;
-
 			}
 		}
-
 	}
-	.home{
-		padding: 23px 26px 24px 25px;
-	}
-	.work{
-		padding: 23px 24px 24px 24px;
-		}
-	.aboutLink{
-		padding: 23px 24px 24px 24px;
-	}
-	.resources{
-		padding: 23px 22px 24px 22px;
-	}
-
-}
-h1{
-	text-transform: uppercase;
-	font-size: 36px;
-	color: white;
-  	font-weight: 700;
-	text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.75);
-	padding: 16px 33px;
-	span{
-		color:#c40000;
-	}	
 }
 
 nav ul li a:hover,
 nav ul li a.active,
 nav ul li a:focus{
-  background-color: #000000;
+	border-top: 4px inset $primary-gold;
+	background-color: #000000;
+}
+.body__featured-image{
+	// width: 100%;
+	// height: 100%;
+	.body__featured-image-bkg{
+		position: absolute;
+		background-image: url(../img/feature-1-bg.jpg);
+		width: 100%;
+		height: 100%;
+		background-repeat: no-repeat;
+		// top: 0;
+		left: 0;
+		z-index: -10;
+	}
+	.body__featured-image-fg{
+		position: relative;
+		background-image: url(../img/feature-1-vehicles.jpg);
+		width: 100%;
+		height: 200px;
+		background-repeat: no-repeat;
+		transform-origin: 50% 50%;
+		top: 247px;
+    	left: 60px;
+		z-index: -5;
+	}
+}
+.body__squares-container{
+	position: absolute;
+	top: 640px;
+	left: 50%;
+	width: 100%;
+	transform: translate(-50%, -50%);
+	.body__squares{
+		float: left;
+		background-clip: content-box;
+		margin: 10px;
+		padding: 4px;
+		background-color: white;
+		border: 1px solid #ffffff;
+		text-align: center;
+	}
+	.body__squares--430x200{
+		position: relative;
+		width: 430px;
+		height: 200px;
+		p{
+			@include body__squares--font;
+	    	font-size: 20px;
+		}
+	}
+	.body__squares--310x200{
+		position: relative;
+		width: 310px;
+		height: 200px;
+		p{
+			@include body__squares--font;
+		}
+	}
+}
+footer{
+
 }
 /*
 Recreate the Jeep page using Sass and Gulp and the BEM notation methodology. The project files and assets are available under Class Files.
