--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,58 +24,118 @@ TABLE OF CONTENTS:
 /* 1. VARIABLES  ========================================= */
 /* 2. TYPOGRAPHY  ======================================== */
 body {
-  font-family: Arial, Helvetica, sans-serif; }
+  background-color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden; }
 
 header {
   font-family: 'Montserrat', sans-serif; }
 
 /*  CONTENT  =============================================== */
-header.header {
+.body--wrapper {
+  position: relative;
+  width: 1366px;
+  height: 1282px;
+  margin: 0 auto; }
+
+.header {
   width: 100%;
   height: 60px;
   border-bottom: 1px solid #000000;
-  background-image: -moz-linear-gradient(90deg, #171717 0%, #302f2f 100%);
-  background-image: -webkit-linear-gradient(90deg, #171717 0%, #302f2f 100%);
-  background-image: -ms-linear-gradient(90deg, #171717 0%, #302f2f 100%);
+  background-image: -moz-linear-gradient(90deg, black 0%, #333333 100%);
+  background-image: -webkit-linear-gradient(90deg, black 0%, #333333 100%);
+  background-image: -ms-linear-gradient(90deg, black 0%, #333333 100%);
   background-color: #000000; }
-  header.header nav {
+  .header .header__logo {
     float: left;
+    padding: 8px;
+    margin-left: 150px; }
+  .header .header__logo-banner {
+    float: left;
+    margin-left: 800px; }
+  .header .header__nav {
     position: absolute;
-    right: 0px;
-    top: 26px;
-    text-transform: uppercase; }
-    header.header nav ul li {
-      float: left; }
-      header.header nav ul li a {
-        border-left: 1px solid #595959;
-        /*padding: 23px 24px 24px 24px;*/
-        letter-spacing: -.04em;
+    left: 280px;
+    top: 0px; }
+    .header .header__nav ul li {
+      float: left;
+      border-right: 2px solid #000000;
+      padding: 22px 0 22px 0; }
+      .header .header__nav ul li .header__nav-home,
+      .header .header__nav ul li .header__nav-work,
+      .header .header__nav ul li .header__nav-shoppingTools,
+      .header .header__nav ul li .header__nav-capability,
+      .header .header__nav ul li .header__nav-owners {
+        padding: 16px 24px 21px 24px;
         font-weight: 400;
-        font-size: 18px;
+        text-decoration: none;
         color: #ffffff; }
-  header.header .home {
-    padding: 23px 26px 24px 25px; }
-  header.header .work {
-    padding: 23px 24px 24px 24px; }
-  header.header .aboutLink {
-    padding: 23px 24px 24px 24px; }
-  header.header .resources {
-    padding: 23px 22px 24px 22px; }
-
-h1 {
-  text-transform: uppercase;
-  font-size: 36px;
-  color: white;
-  font-weight: 700;
-  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.75);
-  padding: 16px 33px; }
-  h1 span {
-    color: #c40000; }
 
 nav ul li a:hover,
 nav ul li a.active,
 nav ul li a:focus {
+  border-top: 4px inset #ffb302;
   background-color: #000000; }
+
+.body__featured-image .body__featured-image-bkg {
+  position: absolute;
+  background-image: url(../img/feature-1-bg.jpg);
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  left: 0;
+  z-index: -10; }
+
+.body__featured-image .body__featured-image-fg {
+  position: relative;
+  background-image: url(../img/feature-1-vehicles.jpg);
+  width: 100%;
+  height: 200px;
+  background-repeat: no-repeat;
+  transform-origin: 50% 50%;
+  top: 247px;
+  left: 60px;
+  z-index: -5; }
+
+.body__squares-container {
+  position: absolute;
+  top: 640px;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%); }
+  .body__squares-container .body__squares {
+    float: left;
+    background-clip: content-box;
+    margin: 10px;
+    padding: 4px;
+    background-color: white;
+    border: 1px solid #ffffff;
+    text-align: center; }
+  .body__squares-container .body__squares--430x200 {
+    position: relative;
+    width: 430px;
+    height: 200px; }
+    .body__squares-container .body__squares--430x200 p {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #555;
+      font-weight: bold;
+      opacity: 0.5;
+      font-size: 20px; }
+  .body__squares-container .body__squares--310x200 {
+    position: relative;
+    width: 310px;
+    height: 200px; }
+    .body__squares-container .body__squares--310x200 p {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #555;
+      font-weight: bold;
+      opacity: 0.5; }
 
 /*
 Recreate the Jeep page using Sass and Gulp and the BEM notation methodology. The project files and assets are available under Class Files.
