--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -31,7 +31,6 @@ TABLE OF CONTENTS:
 body{
 	background-color: #000;
 	font-family: Arial, Helvetica, sans-serif;
-	overflow: hidden;
 }
 header{
 	font-family: 'Montserrat', sans-serif;
@@ -58,7 +57,7 @@ header{
 		margin-left: 150px;
 	}
 	.header__logo-banner{
-		float: left;
+		position: absolute;	
 		// display: block;
 		margin-left: 800px;
 	}
@@ -79,21 +78,34 @@ header{
 				padding: 16px 24px 21px 24px;
 				font-weight: 400;
 				text-decoration: none;
-				color: #ffffff;
+				color: #444;
+				&:hover,
+				&:focus{
+					border-top: 4px inset $primary-gold;
+					background-color: #000000;
+					color: white;
+				}
 			}
 		}
 	}
 }
-
-nav ul li a:hover,
-nav ul li a.active,
-nav ul li a:focus{
+.active{
 	border-top: 4px inset $primary-gold;
 	background-color: #000000;
+	color: white;
 }
+// nav ul li a:hover,
+// nav ul li a.active,
+// nav ul li a:focus{
+// 	border-top: 4px inset $primary-gold;
+// 	background-color: #000000;
+// 	color: white;
+// }
 .body__featured-image{
-	// width: 100%;
-	// height: 100%;
+	position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 	.body__featured-image-bkg{
 		position: absolute;
 		background-image: url(../img/feature-1-bg.jpg);
@@ -105,23 +117,20 @@ nav ul li a:focus{
 		z-index: -10;
 	}
 	.body__featured-image-fg{
-		position: relative;
+		position: absolute;
 		background-image: url(../img/feature-1-vehicles.jpg);
 		width: 100%;
-		height: 200px;
+		height: 100%;
 		background-repeat: no-repeat;
 		transform-origin: 50% 50%;
 		top: 247px;
     	left: 60px;
-		z-index: -5;
+		z-index: -5;	
 	}
 }
 .body__squares-container{
-	position: absolute;
-	top: 640px;
-	left: 50%;
-	width: 100%;
-	transform: translate(-50%, -50%);
+	width: 1110px;
+    margin: 500px auto;
 	.body__squares{
 		float: left;
 		background-clip: content-box;
@@ -149,8 +158,47 @@ nav ul li a:focus{
 		}
 	}
 }
-footer{
-
+.footer{
+	position: absolute;
+	width: 100%;
+	height: 482px;
+	top: 100%;
+	left: 0;
+	font-size: 12px;
+	color: #FFF;
+	border-top: 1px solid #444; 
+	background-image: -moz-linear-gradient( 90deg, #111 0%, #222 100%);
+	background-image: -webkit-linear-gradient( 90deg, #111 0%, #222 100%);
+	background-image: -ms-linear-gradient( 90deg, #111 0%, #222 100%);
+	.footer__links-container{
+		width: 1110px;
+		margin: 0 auto;
+		.footer__links{
+			float: left;
+			width: 220px;
+			padding: 40px 0px 50px 10px;
+			height: auto;
+			.footer__links--header{
+				text-transform: uppercase;
+				font-weight: bold;
+				line-height: 1.8em;
+			}
+			.footer__links--disclaimers{
+				display: block;
+				opacity: 0.5;
+				line-height: 1.8em;
+			}
+		}	
+	}
+}
+.footer__copyright{
+	width: 1110px;
+	margin: 0 auto;
+	p{
+		display: block;
+		line-height: 2em;
+		padding: 0px 0 10px 10px;
+	}
 }
 /*
 Recreate the Jeep page using Sass and Gulp and the BEM notation methodology. The project files and assets are available under Class Files.
