--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,7 +24,7 @@ TABLE OF CONTENTS:
 /* 1. VARIABLES  ========================================= */
 /* 2. TYPOGRAPHY  ======================================== */
 body {
-  background-color: #000;
+  background-color: #000000;
   font-family: Arial, Helvetica, sans-serif; }
 
 header {
@@ -41,10 +41,10 @@ header {
   width: 100%;
   height: 60px;
   border-bottom: 1px solid #000000;
-  background-image: -moz-linear-gradient(90deg, #000 0%, #333 100%);
-  background-image: -webkit-linear-gradient(90deg, #000 0%, #333 100%);
-  background-image: -ms-linear-gradient(90deg, #000 0%, #333 100%);
-  background-color: #000000; }
+  background-color: #000000;
+  background-image: -moz-linear-gradient(90deg, #000000 0%, #333 100%);
+  background-image: -webkit-linear-gradient(90deg, #000000 0%, #333 100%);
+  background-image: -ms-linear-gradient(90deg, #000000 0%, #333 100%); }
   .header .header__logo {
     float: left;
     padding: 8px;
@@ -93,21 +93,21 @@ header {
   overflow: hidden; }
   .body__featured-image .body__featured-image-bkg {
     position: absolute;
-    background-image: url(../img/feature-1-bg.jpg);
     width: 100%;
     height: 100%;
-    background-repeat: no-repeat;
     left: 0;
+    background-image: url(../img/feature-1-bg.jpg);
+    background-repeat: no-repeat;
     z-index: -10; }
   .body__featured-image .body__featured-image-fg {
     position: absolute;
-    background-image: url(../img/feature-1-vehicles.jpg);
     width: 100%;
     height: 100%;
-    background-repeat: no-repeat;
-    transform-origin: 50% 50%;
     top: 247px;
     left: 60px;
+    background-image: url(../img/feature-1-vehicles.jpg);
+    background-repeat: no-repeat;
+    transform-origin: 50% 50%;
     z-index: -5; }
 
 .body__squares-container {
@@ -118,7 +118,7 @@ header {
     background-clip: content-box;
     margin: 10px;
     padding: 4px;
-    background-color: white;
+    background-color: #ffffff;
     border: 1px solid #ffffff;
     text-align: center; }
   .body__squares-container .body__squares--430x200 {
@@ -154,7 +154,7 @@ header {
   top: 100%;
   left: 0;
   font-size: 12px;
-  color: #FFF;
+  color: #ffffff;
   border-top: 1px solid #444;
   background-image: -moz-linear-gradient(90deg, #111 0%, #222 100%);
   background-image: -webkit-linear-gradient(90deg, #111 0%, #222 100%);
@@ -166,15 +166,14 @@ header {
       float: left;
       width: 220px;
       padding: 40px 0px 50px 10px;
+      line-height: 1.8em;
       height: auto; }
       .footer .footer__links-container .footer__links .footer__links--header {
         text-transform: uppercase;
-        font-weight: 700;
-        line-height: 1.8em; }
+        font-weight: 700; }
       .footer .footer__links-container .footer__links .footer__links--disclaimers {
         display: block;
-        opacity: 0.5;
-        line-height: 1.8em; }
+        opacity: 0.5; }
 
 .footer__copyright {
   width: 100%;
@@ -184,39 +183,3 @@ header {
     line-height: 1.8em;
     padding: 0px 0 5px 10px;
     color: #555; }
-
-/*
-Recreate the Jeep page using Sass and Gulp and the BEM notation methodology. The project files and assets are available under Class Files.
-
----------------------------------
-STEP ONE - GIT
-
-Create an account on GitHub. (Use the following tutorial if needed: http://try.github.io)
-
----------------------------------
-STEP TWO - PROJECT
-
-DESIGN INFO
-The main brand font used for this site is Monserrat, available from Google Fonts. All body copy should be in an Arial/Helvetica/sans-serif stack.
-
-Here are the colors used for links and many other components.
-@colorBrand: 			#ffb302; // Gold
-@colorAccent: 			#ff9d01; // Darker gold
-
-
-HEADER
-The header is 60px tall. The background gradient is from #333 to #000. The Jeep logo is available in the header-sprite.png file. Active states have a 4px gold border at the top.
-
-FOOTER
-Gradient from #222 to #111. Border at the top is #444. Font size is 12px for links and disclaimers with headers that are white.
-
-OTHER NOTES
-Use mixins for all gradients and any other code you find yourself using more than twice.
-
----------------------------------
-STEP THREE - SUBMIT TO GITHUB AND RINGMASTER
-Create a repository for this project on GITHUB. Add and commit your work to this repository. (Here's a cheat-sheet to help you along.
-http://www.git-tower.com/blog/git-cheat-sheet-detail/)
-
-Also upload your code to CircusLabs, and then submit both links here on RingMaster
-*/
