--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -23,13 +23,14 @@ TABLE OF CONTENTS:
 /* 1. VARIABLES  ========================================= */
 
 @import "variables";
+@import "mixins";
 @import 'https://fonts.googleapis.com/css?family=Montserrat';
 
 
 /* 2. TYPOGRAPHY  ======================================== */
 
 body{
-	background-color: #000;
+	background-color: $body-color;
 	font-family: Arial, Helvetica, sans-serif;
 }
 header{
@@ -46,11 +47,9 @@ header{
 .header {
 	width:	100%;
 	height: 60px;
-	border-bottom: 1px solid #000000;
-	background-image: -moz-linear-gradient( 90deg, #000 0%, #333 100%);
-	background-image: -webkit-linear-gradient( 90deg, #000 0%, #333 100%);
-	background-image: -ms-linear-gradient( 90deg, #000 0%, #333 100%);
-	background-color: #000000;
+	border-bottom: 1px solid $body-color;
+	background-color: $body-color;
+	@include header--gradient;
 	.header__logo{
 		float: left;
 		padding: 8px;
@@ -58,17 +57,15 @@ header{
 	}
 	.header__logo-banner{
 		position: absolute;	
-		// display: block;
 		margin-left: 800px;
 	}
 	.header__nav{
 		position: absolute;
 		left: 280px;
-		// left: 23%;
 		top: 0px;
 		ul li{
 			float: left;
-			border-right: 2px solid #000000;
+			border-right: 2px solid $body-color;
 			padding: 22px 0 22px 0;
 			.header__nav-home,
 			.header__nav-work,
@@ -81,15 +78,11 @@ header{
 				color: #444;
 				&:hover,
 				&:focus{
-					border-top: 4px inset $primary-gold;
-					background-color: #000000;
-					color: white;
+					@include header--active;
 				}	
 			}
 			.active{
-				border-top: 4px inset $primary-gold;
-				background-color: #000000;
-				color: white;
+				@include header--active;
 			}
 		}
 	}
@@ -97,41 +90,37 @@ header{
 
 .body__featured-image{
 	position: relative;
-    width: 100%;
-    height: 100%;
+    @include width-height--fullPercent;
     overflow: hidden;
 	.body__featured-image-bkg{
 		position: absolute;
-		background-image: url(../img/feature-1-bg.jpg);
-		width: 100%;
-		height: 100%;
-		background-repeat: no-repeat;
-		// top: 0;
+		@include width-height--fullPercent;
 		left: 0;
+		background-image: url(../img/feature-1-bg.jpg);
+		background-repeat: no-repeat;
 		z-index: -10;
 	}
 	.body__featured-image-fg{
 		position: absolute;
-		background-image: url(../img/feature-1-vehicles.jpg);
-		width: 100%;
-		height: 100%;
-		background-repeat: no-repeat;
-		transform-origin: 50% 50%;
+		@include width-height--fullPercent;
 		top: 247px;
     	left: 60px;
+		background-image: url(../img/feature-1-vehicles.jpg);
+		background-repeat: no-repeat;
+		transform-origin: 50% 50%;
 		z-index: -5;	
 	}
 }
 .body__squares-container{
-	width: 1110px;
+	@include container--width;
     margin: 500px auto;
 	.body__squares{
 		float: left;
 		background-clip: content-box;
 		margin: 10px;
 		padding: 4px;
-		background-color: white;
-		border: 1px solid #ffffff;
+		background-color: $main-font-color;
+		border: 1px solid $main-font-color;
 		text-align: center;
 	}
 	.body__squares--430x200{
@@ -159,28 +148,25 @@ header{
 	top: 100%;
 	left: 0;
 	font-size: 12px;
-	color: #FFF;
+	color: $main-font-color;
 	border-top: 1px solid #444; 
-	background-image: -moz-linear-gradient( 90deg, #111 0%, #222 100%);
-	background-image: -webkit-linear-gradient( 90deg, #111 0%, #222 100%);
-	background-image: -ms-linear-gradient( 90deg, #111 0%, #222 100%);
+	@include footer--gradient;
 	.footer__links-container{
-		width: 1110px;
+		@include container--width;
 		margin: 0 auto;
 		.footer__links{
 			float: left;
 			width: 220px;
 			padding: 40px 0px 50px 10px;
+			line-height: 1.8em;
 			height: auto;
 			.footer__links--header{
 				text-transform: uppercase;
 				font-weight: 700;
-				line-height: 1.8em;
 			}
 			.footer__links--disclaimers{
 				display: block;
-				opacity: 0.5;
-				line-height: 1.8em;
+				opacity: 0.5;	
 			}
 		}	
 	}
@@ -195,38 +181,3 @@ header{
 		color: #555;
 	}
 }
-/*
-Recreate the Jeep page using Sass and Gulp and the BEM notation methodology. The project files and assets are available under Class Files.
-
----------------------------------
-STEP ONE - GIT
-
-Create an account on GitHub. (Use the following tutorial if needed: http://try.github.io)
-
----------------------------------
-STEP TWO - PROJECT
-
-DESIGN INFO
-The main brand font used for this site is Monserrat, available from Google Fonts. All body copy should be in an Arial/Helvetica/sans-serif stack.
-
-Here are the colors used for links and many other components.
-@colorBrand: 			#ffb302; // Gold
-@colorAccent: 			#ff9d01; // Darker gold
-
-
-HEADER
-The header is 60px tall. The background gradient is from #333 to #000. The Jeep logo is available in the header-sprite.png file. Active states have a 4px gold border at the top.
-
-FOOTER
-Gradient from #222 to #111. Border at the top is #444. Font size is 12px for links and disclaimers with headers that are white.
-
-OTHER NOTES
-Use mixins for all gradients and any other code you find yourself using more than twice.
-
----------------------------------
-STEP THREE - SUBMIT TO GITHUB AND RINGMASTER
-Create a repository for this project on GITHUB. Add and commit your work to this repository. (Here's a cheat-sheet to help you along.
-http://www.git-tower.com/blog/git-cheat-sheet-detail/)
-
-Also upload your code to CircusLabs, and then submit both links here on RingMaster
-*/
