--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,8 +22,8 @@ TABLE OF CONTENTS:
 
 /* 1. VARIABLES  ========================================= */
 
-@import "variables";
-@import "mixins";
+@import "base/variables";
+@import "base/mixins";
 @import 'https://fonts.googleapis.com/css?family=Montserrat';
 
 
