--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -25,7 +25,7 @@ TABLE OF CONTENTS:
 @import "base/reset"; //always should go first
 @import "base/typography";
 
-@import "components/navigation"
+@import "components/navigation";
 
 @import "helpers/mixins";
 @import "helpers/variables";
@@ -40,58 +40,17 @@ TABLE OF CONTENTS:
 
 
 /*  CONTENT  =============================================== */
-.body--wrapper{
+.hero{
 	position: relative;
     width: 1366px;
     height: 1222px;
     margin: 0 auto;
 }
-.header {
-	width:	100%;
-	height: 60px;
-	border-bottom: 1px solid $body-color;
-	background-color: $body-color;
-	@include header--gradient;
-	.header__logo{
-		float: left;
-		padding: 8px;
-		margin-left: 150px;
-	}
-	.header__logo-banner{
-		position: absolute;	
-		margin-left: 800px;
-	}
-	.header__nav{
-		position: absolute;
-		left: 280px;
-		top: 0px;
-		ul li{
-			float: left;
-			border-right: 1px solid $body-color;
-			border-left: 1px solid $body-color;
-			padding: 22px 0 22px 0;
-			.header__nav-links {
-				padding: 16px 24px 21px 24px;
-				font-weight: 400;
-				text-decoration: none;
-				color: #444;
-				&:hover,
-				&:focus{
-					@include header--active;
-				}	
-			}
-			.active{
-				@include header--active;
-			}
-		}
-	}
-}
-
-.body__featured-image{
+.featured-image{
 	position: relative;
     @include width-height--fullPercent;
     overflow: hidden;
-	.body__featured-image-bkg{
+	.featured-image-bkg{
 		position: absolute;
 		@include width-height--fullPercent;
 		left: 0;
@@ -99,7 +58,7 @@ TABLE OF CONTENTS:
 		background-repeat: no-repeat;
 		z-index: -10;
 	}
-	.body__featured-image-fg{
+	.featured-image-fg{
 		position: absolute;
 		@include width-height--fullPercent;
 		top: 247px;
@@ -110,10 +69,10 @@ TABLE OF CONTENTS:
 		z-index: -5;	
 	}
 }
-.body__squares-container{
+.squares-container{
 	@include container--width;
     margin: 500px auto;
-	.body__squares{
+	.squares{
 		float: left;
 		background-clip: content-box;
 		margin: 10px;
@@ -122,21 +81,21 @@ TABLE OF CONTENTS:
 		border: 1px solid $main-font-color;
 		text-align: center;
 	}
-	.body__squares--large{
+	.squares--large{
 		position: relative;
 		width: 430px;
 		height: 200px;
 		p{
-			@include body__squares--font;
+			@include squares--font;
 	    	font-size: 20px;
 		}
 	}
-	.body__squares--medium{
+	.squares--medium{
 		position: relative;
 		width: 310px;
 		height: 200px;
 		p{
-			@include body__squares--font;
+			@include squares--font;
 		}
 	}
 }
