--- a/assets/scss/helpers/_mixins.scss
+++ b/assets/scss/helpers/_mixins.scss
@@ -6,7 +6,7 @@
 	background-image: -ms-linear-gradient( 90deg, $body-color 0%, #333 100%);
 }
 
-@mixin nav--active{
+@mixin nav--highlight{
 	padding: 16px 24px 21px 24px;
 	text-decoration: none;
 	border-top: 4px inset $primary-gold;
